# ZKAP

circom2llvm/ir_generator/: Cargo.toml
circom2llvm/ir_generator/src/: info_collector.rs  statement.rs
detectors/: CMakeLists.txt
